syntax = "proto3";

package api;

//option go_package = "github.com/brocaar/chirpstack-api/go/v3/as/external/api";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

message ServiceGroup {
	string ApiKey          = 1 	[json_name = "apikey,omitempty"]
	string EntityType      = 2 	[json_name = "entity_type,omitempty"]
	string Resource        = 3 	[json_name = "resource,omitempty"]
	string Commands        = 4 	[json_name = "commands,omitempty"]
	string Attributes      = 5 	[json_name = "attributes,omitempty"]
	string StaticAttributes= 6 	[json_name = "static_attributes,omitempty"]
	string Lazy            = 7 	[json_name = "lazy,omitempty"]
	string Service         = 8 	[json_name = "service,omitempty"]
	string Subservice      = 9 	[json_name = "subservice,omitempty"]
	string ID	       = 10 	[json_name = "_id,omitempty"]
}

service IotAgent {
	rpc DeleteService() () {}
	rpc CreateService() () {}
	rpc ListService
	rpc UpdateService
	rpc Service 
}
